# Iterative-Disparity-Network

./: CMakeCache.txt  CMakeLists.txt  NN.cpp  NN.h  Network.cpp  Network.h  a.out  activations.csv  batch_activations.csv  cg_williams_module.c  cg_williams_module.h  disparity.csv  disparityNet.h  dispnet.h  filesystem.h  image1.csv  image2.csv  main.cpp  model.h  outputs.csv  r_script.R  utils.h  weights.csv
Logs/MonJul260048002021/0/: Batch_Activations.csv
Logs/MonJul260048002021/100/: Activations.csv  Batch_Activations.csv  Batch_F.csv  Batch_Weights.csv  Weights.csv
Logs/MonJul260048002021/150/: Activations.csv  Batch_Activations.csv  Batch_Weights.csv  Outputs.csv
Logs/MonJul260048002021/200/: Batch_Activations.csv  Batch_Weights.csv
Logs/MonJul260048002021/250/: Batch_Activations.csv  Batch_Weights.csv
Logs/MonJul260048002021/300/: Activations.csv  Batch_Activations.csv  Batch_Weights.csv
Logs/MonJul260048002021/350/: Batch_Activations.csv  Batch_Weights.csv
Logs/MonJul260048002021/400/: Activations.csv  Batch_Activations.csv  Batch_F.csv  Batch_Weights.csv  Outputs.csv
Logs/MonJul260048002021/450/: Activations.csv  Batch_Activations.csv  Batch_F.csv  Batch_Weights.csv  Weights.csv
Logs/MonJul260048002021/50/: Batch_Activations.csv  Batch_Weights.csv
Logs/MonJul260048002021/500/: Activations.csv  Batch_Activations.csv  Batch_F.csv  Batch_Weights.csv  Outputs.csv  (+1 more)
build_M1/: CMakeCache.txt  cmake_install.cmake
build_M1/CMakeScripts/: ReRunCMake.make
build_M1/Debug/: DisparityNetwork
build_M1/DisparityNetwork.xcodeproj/: project.pbxproj
(+87 files in other folders)
